Fix #20: apply .aligncenter to un-nested images

--- a/assets/src/less/post.less
+++ b/assets/src/less/post.less
@@ -59,7 +59,8 @@
 		margin-left: @double;
 	}
 
-	figure.aligncenter {
+	.aligncenter {
+		display: block;
 		margin-left: auto;
 		margin-right: auto;
 	}
